# ansible-eda-container

./: README.md  pyproject.toml  tasks.py
container/: Dockerfile
container/eda/rulebooks/: example.yaml
eda/playbooks/: decryption_example.yaml
